# sims-smart-inventory-management

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: CMakeLists.txt
sqlite-autoconf-3500100/: libsqlite3.dylib  sqlite3  sqlite3.pc  sqlite_cfg.h
sqlite-autoconf-3500100/conftest__.dSYM/Contents/Resources/DWARF/: conftest__
sqlite-autoconf-3500100/conftest__.dSYM/Contents/Resources/Relocations/x86_64/: conftest__.yml
sqlite-autoconf-3500100/sqlite3.dSYM/Contents/Resources/DWARF/: sqlite3
sqlite-autoconf-3500100/sqlite3.dSYM/Contents/Resources/Relocations/x86_64/: sqlite3.yml
src/: CMakeLists.txt  inventory.db  main.cpp  product.cpp
src/core/: OrderItems.h  customer.cpp  customer.h  order.cpp  order.h  product.cpp  product.h  supplier.cpp  supplier.h
tests/: CMakeLists.txt  test_cmake_demo.cpp
